Make service-auth-token configurable in the manifest
[Finishes #66689260]

--- a/jobs/v1-dummy-broker/templates/broker.env.erb
+++ b/jobs/v1-dummy-broker/templates/broker.env.erb
@@ -8,3 +8,4 @@ UAA_USERNAME=<%= properties.env.uaa_username %>
 UAA_PASSWORD=<%= properties.env.uaa_password %>
 CLOUD_CONTROLLER_URI=<%= properties.env.cloud_controller_uri %>
 NATS_URI=nats://<%= properties.env.nats.user %>:<%= properties.env.nats.password %>@<%= properties.env.nats.address %>:<%= properties.env.nats.port %>
+SERVICE_AUTH_TOKEN=<%= properties.env.service_auth_token %>
