--- a/src/v1-dummy-broker/config/gateway_config.yml.erb
+++ b/src/v1-dummy-broker/config/gateway_config.yml.erb
@@ -1,7 +1,7 @@
 ---
 cc_api_version: v2
 service_auth_tokens:
-  dummy_test: 36001246-f5d0-4d9a-aa33-7d2522fe1ea7
+  dummy_test: <%= ENV['SERVICE_AUTH_TOKEN'] or raise('SERVICE_AUTH_TOKEN must be set in env vars') %>
 ip_route: <%= ENV['IP_ROUTE'] or raise('IP_ROUTE must be set in env vars') %>
 service:
   name: v1-test
