--- a/jobs/v1-dummy-node/templates/node.env.erb
+++ b/jobs/v1-dummy-node/templates/node.env.erb
@@ -10,3 +10,4 @@ CLOUD_CONTROLLER_URI=<%= properties.env.cloud_controller_uri %>
 NATS_URI=nats://<%= properties.env.nats.user %>:<%= properties.env.nats.password %>@<%= properties.env.nats.address %>:<%= properties.env.nats.port %>
 NODE_DB=sqlite3:/tmp/node.db
 SERVICE_AUTH_TOKEN=<%= properties.env.service_auth_token %>
+APP_DOMAIN=<%= properties.env.app_domain %>
